--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -18,6 +18,8 @@ clean-targets:
 
 models:
   jaffle_shop:
+      +post-hook:
+        - "{{ do_stuff() }}"
       materialized: table
       staging:
         materialized: view
